added content and style

--- a/index.html
+++ b/index.html
@@ -7,6 +7,46 @@
         <link rel="stylesheet" href="style.css" />
     </head>
     <body>
+        <div class="container">
+            <div class="card">
+                <form class="location">
+                    <input type="text" placeholder="Type city name or postcode:" />
+                </form>
+               <div class="main">
+                   <h1>City Name</h1>
+                   <p>Mostly Sunny</p>
+                   <h1>21°</h1>
+               </div>
+               <hr />
+                <table class="days-of-the-week">
+                    <tr>
+                        <td>Monday</td>
+                        <td>Tuesday</td>
+                        <td>Wednesday</td>
+                        <td>Thursday</td>
+                        <td>Friday</td>
+                        <td>Saturday</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+                <hr />
+            </div>
+        </div>
 
         <script src="script.js"></script>
     </body>
