--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
                 <div class="app-title">
                     <h1>Weather-App</h1>
                 </div>
-                <div class="input-group mb-3">
+                <form class="input-group mb-3">
                     <input type="text" class="form-control" id="location-name" placeholder="Type city name or postcode:" aria-describedby="basic-addon2" />
                     <div class="input-group-append">
                       <button class="btn btn-warning" id="search-location" type="submit"><i class="fas fa-search"></i></button>
+                      <span class="msg"></span>
                     </div>
-                </div>
+                </form>
                 <div class="notification"></div>
                <div class="weather-container">
                    <div class="location">
@@ -62,7 +63,7 @@
                 <hr />
             </div>
         </div>
-        <!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="script.js"></script>
     </body>
 </html>
