added function getWeatherByName
show weather after type city name

--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
                <hr />
                 <table class="days-of-the-week">
                     <tr>
-                        <td>Monday</td>
-                        <td>Tuesday</td>
-                        <td>Wednesday</td>
-                        <td>Thursday</td>
-                        <td>Friday</td>
-                        <td>Saturday</td>
+                        <td class="day1">Monday</td>
+                        <td class="day2">Tuesday</td>
+                        <td class="day3">Wednesday</td>
+                        <td class="day4">Thursday</td>
+                        <td class="day5">Friday</td>
+                        <td class="day6">Saturday</td>
                     </tr>
                     <tr>
-                        <td>24°</td>
-                        <td>24°</td>
-                        <td>24°</td>
-                        <td>24°</td>
-                        <td>24°</td>
-                        <td>24°</td>
+                        <td class="max-temp">24°</td>
+                        <td class="max-temp">24°</td>
+                        <td class="max-temp">24°</td>
+                        <td class="max-temp">24°</td>
+                        <td class="max-temp">24°</td>
+                        <td class="max-temp">24°</td>
                     </tr>
                     <tr>
-                        <td>17°</td>
-                        <td>17°</td>
-                        <td>17°</td>
-                        <td>17°</td>
-                        <td>17°</td>
-                        <td>17°</td>
+                        <td class="min-temp">17°</td>
+                        <td class="min-temp">17°</td>
+                        <td class="min-temp">17°</td>
+                        <td class="min-temp">17°</td>
+                        <td class="min-temp">17°</td>
+                        <td class="min-temp">17°</td>
                     </tr>
                 </table>
                 <hr />
