--- a/index.html
+++ b/index.html
@@ -26,10 +26,16 @@
                    <div class="location">
                        <p>-</p>
                    </div>
+                   <div class="weather-icon">
+                       <img src="icons/unknown.png" />
+                    </div>
                    <div class="temperature-description">
                         <p> - </p>
                     </div>
                    <div class="temperature-value">
+                        <p>- °<span>C</span></p>
+                    </div>
+                    <div class="temperature-feel">
                         <p>- °<span>C</span></p>
                     </div>
                 </div>
