--- a/index.html
+++ b/index.html
@@ -41,30 +41,34 @@
                 </div>
                <hr />
                 <table class="days-of-the-week">
-                    <tr>
-                        <td class="day1">Monday</td>
-                        <td class="day2">Tuesday</td>
-                        <td class="day3">Wednesday</td>
-                        <td class="day4">Thursday</td>
-                        <td class="day5">Friday</td>
-                        <td class="day6">Saturday</td>
-                    </tr>
-                    <tr>
-                        <td class="max-temp">24°</td>
-                        <td class="max-temp">24°</td>
-                        <td class="max-temp">24°</td>
-                        <td class="max-temp">24°</td>
-                        <td class="max-temp">24°</td>
-                        <td class="max-temp">24°</td>
-                    </tr>
-                    <tr>
-                        <td class="min-temp">17°</td>
-                        <td class="min-temp">17°</td>
-                        <td class="min-temp">17°</td>
-                        <td class="min-temp">17°</td>
-                        <td class="min-temp">17°</td>
-                        <td class="min-temp">17°</td>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <th>Monday</th>
+                            <th>Tuesday</th>
+                            <th>Wednesday</th>
+                            <th>Thursday</th>
+                            <th>Friday</th>
+                            <th>Saturday</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>24°</td>
+                            <td>24°</td>
+                            <td>24°</td>
+                            <td>24°</td>
+                            <td>24°</td>
+                            <td>24°</td>
+                        </tr>
+                        <tr>
+                            <td>17°</td>
+                            <td>17°</td>
+                            <td>17°</td>
+                            <td>17°</td>
+                            <td>17°</td>
+                            <td>17°</td>
+                        </tr>
+                    </tbody>  
                 </table>
                 <hr />
             </div>
